--- a/Diario/11_12_2023.md
+++ b/Diario/11_12_2023.md
@@ -1,6 +1,36 @@
 # DIA 11 DE DICIEMBRE
 
-### Parte gem5
-Hoy se ha conseguido arrancar una segunda simulacion con arm-rsk
-Esto es una version de ARM para gem5 que permite emular un ARMv8 moderno (64bit)
+## Parte gem5
+
+### Novedad :: simulacion arm-rsk
+Se ha conseguido arrancar una segunda simulacion con arm-rsk (Research Starter Kit)
+Este RSK implementa una variante de MinorCPU llamada HPI, tuneado por ARM para emular un ARMv8 moderno (64bit)
+HPI permite simular de forma realista un sistema completo con características modificables (archivo gem5_dir/configs/HPI.py)
 Para mas informacion ver su wiki y su PDF
+
+### Novedad :: nuevo kernel apto :: 5.4.49 vs 4.19!
+Ademas de arrancar esta simulacion se ha conseguido utilizar otro kernel, concretamente el Kernel LTS actual (5.4.49) por lo que parece que SI se debe de poder utilizar kernels concretos. De todas formas este esta bien como referencia (agosto 2020)
+
+En los siguientes días se intentará utilizar el mismo kernel que el sistema Raspberry.
+
+### Novedad :: ya se utiliza el resto de cores
+
+Con el HPI los tiempos de los cores son distintos lo que refleja que ahora SI parece que se estan utilizando como tal y no es mera fachada
+La razon de esto es el extracto de stats.txt:
+
+- system.cpu_cluster.cpus0.idleCycles         354929675
+- system.cpu_cluster.cpus1.idleCycles          33286962
+- system.cpu_cluster.cpus2.idleCycles          45495271
+- system.cpu_cluster.cpus3.idleCycles          90653367
+
+El comando para conseguir lo de arriba (ya dentro del directorio de guardado de estadísticas):
+
+$ cat stats.txt | grep system.cpu_cluster.cpus[0-3].power_state && cat stats.txt \
+| grep system.cpu_cluster.cpus[0-3].idleCycles && cat stats.txt \
+| grep system.cpu_cluster.cpus[0-3].tickCycles
+
+### Novedad :: ya se sabe como ejecutar binarios en el modo FS
+
+Ya se sabe como ejecutar binarios en simulaciones completas. Para ello es necesario modificar la imagen de disco de arranque
+Se le metera los scripts a ejecutar al inicio, con la instalacion de dependencias y demas
+La idea es probar esto en los proximos dias.
